# product_order-website

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: devices-ord.csv  devices.csv  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/BlogApp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/BlogApp/migrations/: 0001_initial.py  0002_article_category.py  0003_alter_article_tags.py  0004_alter_article_pub_date.py
mysite/BlogApp/templates/BlogApp/: article_detail.html  article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/mainpage/: urls.py  views.py
mysite/mainpage/templates/mainpage/: index.html  nav-bar.html
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  avatar_update_form.html  base.html  login-handmade.html  login.html  profile-details.html  profile_update_form.html  profiles-list.html  register.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  urls.py  views.py
mysite/shopapp/: admin.py  apps.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: auth-fixtures.json  order-fixtures.json  product-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py
(+30 files in other folders)
